# MLOps-PP2_Productivization

./: LICENSE  README.md  gittest_delete.md  pyproject.toml
.github/workflows/: build.yml
mipaquete/: hola.py  math.py  string.py
tests/: test_mipaquete.py
